--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.7.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.7.0'
 
+    //Jake
+    compile 'com.jakewharton:butterknife:7.0.1'
+
     // Parse
     // compile 'com.parse.bolts:bolts-android:1.1.2'
     compile 'com.parse:parse-android:1.11.0'
